loaded a gif without reloading the page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <img src="#" id="image" />
-    <button id="reloadButton">Load another Gif</button>
+    <button id="reloadButton">Load a Gif</button>
     <script src="script.js"></script>
   </body>
 </html>
