--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     <title>Document</title>
   </head>
   <body>
-    <img src="#" id="image" />
+    <input
+      type="text"
+      id="gifSearch"
+      placeholder="Type of gif you want to see"
+    />
+    <div id="responseDiv">
+      <img src="#" id="image" />
+    </div>
     <button id="reloadButton">Load a Gif</button>
     <script src="script.js"></script>
   </body>
